--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,9 +3,9 @@
   "@@locale":"en",
   "biometrics": "Biometrics",
   "passcode": "Passcode",
-  "initial_passcode_alert": "Please change your initial passcode.",
-  "passcode_direction": "Please input passcode.",
-  "initial_passcode_direction": "Please input passcode.\n Initial one is '0000'.",
+  "initial_passcode_alert": "Please change your initial passcode",
+  "passcode_direction": "Please input passcode",
+  "initial_passcode_direction": "Please input passcode\n Initial one is '0000'",
   "no_data": "No Data",
   "registration_order": "Time Order",
   "genre": "Genre",
@@ -18,10 +18,10 @@
   "password_example": "ex) 1qazxsw2",
   "genre": "Genre",
   "genre_money": "Money",
-  "genre_shopping": "Shopping",
-  "genre_transport": "Transport",
+  "genre_shopping": "Shop",
+  "genre_transport": "Transp",
   "genre_social": "SNS",
-  "genre_entertainment": "Entertainment",
+  "genre_entertainment": "Play",
   "genre_beauty": "Beauty",
   "genre_others": "Others",
   "memo": "MEMO",
@@ -33,9 +33,11 @@
   "delete_password": "Delete All Password",
   "review_bug": "Review This App",
   "licenses": "Licenses",
-  "delete_all_password_confirmation": "All passwords will be deleted.",
+  "delete_all_password_confirmation": "All passwords will be deleted",
   "delete_a_password_confirmation": "Do you want to delete \n this password?",
   "confirm_delete": "Delete",
   "cancel": "Cancel",
-  "validation": "Name field is required.",
+  "validation": "Name field is required",
+  "complete_change": "Changed",
+  "complete_copy": "Copied"
 }
