--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -7,7 +7,7 @@
   "passcode_direction": "Please input passcode",
   "initial_passcode_direction": "Please input passcode\n Initial one is '0000'",
   "no_data": "No Data",
-  "registration_order": "Time Order",
+  "registration_order": "Order in Time",
   "genre": "Genre",
   "settings": "Settings",
   "name": "Name",
