add about this app

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -39,5 +39,6 @@
   "cancel": "Cancel",
   "validation": "Name field is required",
   "complete_change": "Changed",
-  "complete_copy": "Copied"
+  "complete_copy": "Copied",
+  "about_this_app": "About this APP"
 }
