--- a/ios/ja.lproj/InfoPlist.strings
+++ b/ios/ja.lproj/InfoPlist.strings
@@ -6,5 +6,4 @@
   
 */
 CFBundleDisplayName = "きーじー";
-
-NSFaceIDUsageDescription = "生体認証が有効化されていませ。\n設定を変更し、生体認証を有効化してください";
+NSFaceIDUsageDescription = "生体認証が有効化されていません。\n設定を変更し、生体認証を有効化してください";
