change admob word

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -41,5 +41,5 @@
   "complete_copy": "Copied",
   "about_this_app": "About this APP",
   "checkAdmobDisplay":"Can I display ads?",
-  "checkAdmobDisplayDetails":"You need to watch an ad to add new id/pass."
+  "checkAdmobDisplayDetails":"Watch this ad to get a new password"
 }
