--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -40,5 +40,5 @@
   "complete_copy": "コピーしました",
   "about_this_app": "このアプリについて",
   "checkAdmobDisplay":"広告を表示しますか？",
-  "checkAdmobDisplayDetails":"パスワードを追加するには広告の視聴が必要です。"
+  "checkAdmobDisplayDetails":"この広告を視聴して新規パスワードを入力しよう"
 }
