--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -41,5 +41,5 @@
   "complete_copy": "Copied",
   "about_this_app": "About this APP",
   "checkAdmobDisplay":"Can I display ads?",
-  "checkAdmobDisplayDetails":"Watch this ad to get a new password"
+  "checkAdmobDisplayDetails":"By watching the advertisement, you can enter ID/PASSWORD at once."
 }
