--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -40,5 +40,5 @@
   "complete_copy": "コピーしました",
   "about_this_app": "このアプリについて",
   "checkAdmobDisplay":"広告を表示しますか？",
-  "checkAdmobDisplayDetails":"この広告を視聴して新規パスワードを入力しよう"
+  "checkAdmobDisplayDetails":"広告を視聴することで1回分のID/PASSWORDの入力が可能になります。"
 }
